                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 05-12-2004 updated: Romanian language file (Thnx to bompy)
  - 05-12-2004 updated: German (Austrian) language file (Thnx to CEOMR)
  - 05-12-2004 fixed: my music albums, music.jpg is not shown when no thumb is available
  - 02-12-2004 updated: Dutch language file (Thnx to joepmeloenx)
  - 02-12-2004 updated: German (Austrian) language file (Thnx to CEOMR)
  - 02-12-2004 updated: German language file
  - 02-12-2004 added: New Settings System + various SF patches
                      NOTE: THIS WILL BREAK ALL CURRENT SKINS.  ONLY USE PROJECT MAYHEM IN CVS!!!
  - 01-12-2004 added: extended memory tracking for dll's + added dll tracking for dll's
  - 01-12-2004 fixed: removed old memorytracker since it had lot's of issues (this should fix the problem with AQTBrowser)
  - 30-11-2004 added: [ 917706 ] Extra OSD Info (estimated end time & movie filename)
  - 30-11-2004 fixed: [ 970904 ] Screensaver stays on with WebServer/un-pause
  - 30-11-2004 fixed: imdb info/thumbs not saved
  - 29-11-2004 added: Kai protocol level debugging + Specify Kai engine host IP in Settings.
  - 29-11-2004 fixed: [ 1072703 ] Joliet filenames corrupted
  - 28-11-2004 fixed: weird bug whereby Kai friends list wasn't sorted correctly.
  - 28-11-2004 fixed: serialize Kai game titleid resolution and player count requests.
  - 28-11-2004 added: Movie runtime to IMDB info screen + combined Rating+Votes item
  - 28-11-2004 added: get current Kai player count for each game in the games view.
  - 28-11-2004 added: ability to force specific Kai arena - game title id mappings.